:lipstick: Fixing a bunch of SonarQube reported issues
Signed-off-by: Fred Bricon <fbricon@gmail.com>