@@ -67,7 +67,7 @@ public class QuickFixProcessor {
 		ArrayList<CUCorrectionProposal> resultingCollections = new ArrayList<>();
 		for (int i = 0; i < locations.length; i++) {
 			IProblemLocation curr = locations[i];
-			Integer id = new Integer(curr.getProblemId());
+			Integer id = Integer.valueOf(curr.getProblemId());
 			if (handledProblems.add(id)) {
 				process(context, curr, resultingCollections);
 			}
